Create scientific profile HTML structure
Added a complete HTML structure for a scientific profile page, including sections for about, core expertise, selected projects, services offered, tech stack, and contact information.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,151 @@
-Hello, world!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Scientific Profile | Multi-Omics Data Analysis</title>
+
+<style>
+body {
+  margin: 0;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: #f8fafc;
+  color: #0f172a;
+  line-height: 1.6;
+}
+
+header {
+  background: linear-gradient(135deg, #03045e, #0077b6);
+  color: white;
+  padding: 70px 20px;
+  text-align: center;
+}
+
+section {
+  max-width: 1000px;
+  margin: auto;
+  padding: 50px 20px;
+}
+
+h2 {
+  color: #03045e;
+  border-bottom: 3px solid #90e0ef;
+  display: inline-block;
+  padding-bottom: 6px;
+}
+
+.skills, .projects, .services {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 20px;
+}
+
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0 8px 25px rgba(0,0,0,0.06);
+}
+
+footer {
+  background: #03045e;
+  color: white;
+  text-align: center;
+  padding: 25px;
+}
+
+a {
+  color: #0077b6;
+  text-decoration: none;
+}
+</style>
+</head>
+
+<body>
+
+<header>
+  <h1>Multi-Omics Data Scientist</h1>
+  <p>Integrative Genomics • Proteomics • Transcriptomics • Systems Biology</p>
+</header>
+
+<section>
+  <h2>About Me</h2>
+  <p>
+    I specialize in <strong>multi-omics data analysis</strong>, integrating
+    genomics, transcriptomics, proteomics, and metabolomics to extract
+    biologically meaningful insights from complex datasets.
+    My work focuses on disease biology, biomarker discovery, and
+    translational research.
+  </p>
+</section>
+
+<section>
+  <h2>Core Expertise</h2>
+  <div class="skills">
+    <div class="card">🧬 Genomics & Variant Analysis (WGS/WES)</div>
+    <div class="card">📊 RNA-seq & Single-Cell Analysis</div>
+    <div class="card">🧪 Proteomics (LC-MS/MS, DIA, DDA)</div>
+    <div class="card">🧠 Multi-Omics Integration</div>
+    <div class="card">📈 Statistical & Machine Learning Models</div>
+    <div class="card">🧩 Pathway & Network Biology</div>
+  </div>
+</section>
+
+<section>
+  <h2>Selected Projects</h2>
+  <div class="projects">
+    <div class="card">
+      <h3>🔬 Multi-Omics Disease Signature Discovery</h3>
+      <p>Integrated RNA-seq and proteomics data to identify disease-specific
+      biomarkers using network-based approaches.</p>
+    </div>
+
+    <div class="card">
+      <h3>🧬 Variant Prioritization Pipeline</h3>
+      <p>Developed ML-based framework for pathogenic variant ranking using
+      functional annotations and SHAP interpretation.</p>
+    </div>
+
+    <div class="card">
+      <h3>🧪 LC-MS Proteomics Analysis</h3>
+      <p>Quantitative proteomics workflows including normalization,
+      differential analysis, and functional enrichment.</p>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2>Services Offered</h2>
+  <div class="services">
+    <div class="card">✔ End-to-End Multi-Omics Analysis</div>
+    <div class="card">✔ RNA-seq / scRNA-seq Data Analysis</div>
+    <div class="card">✔ Proteomics Data Processing & Interpretation</div>
+    <div class="card">✔ Variant Annotation & Prioritization</div>
+    <div class="card">✔ Publication-Ready Figures & Reports</div>
+    <div class="card">✔ Custom Bioinformatics Pipelines</div>
+  </div>
+</section>
+
+<section>
+  <h2>Tech Stack</h2>
+  <p>
+    R • Python • Bioconductor • Nextflow • Snakemake • Linux • Docker • Git •
+    GSEA • Cytoscape • Seurat • Scanpy • MaxQuant • Perseus
+  </p>
+</section>
+
+<section>
+  <h2>Contact & Collaboration</h2>
+  <p>
+    Interested in collaboration or data analysis support?<br>
+    📧 Email: <strong>your.email@domain.com</strong><br>
+    🔗 GitHub: <a href="#">github.com/yourusername</a><br>
+    🔗 LinkedIn: <a href="#">linkedin.com/in/yourprofile</a>
+  </p>
+</section>
+
+<footer>
+  © 2026 | Multi-Omics Scientific Consulting
+</footer>
+
+</body>
+</html>
